use rocky 8 instead of centos 8

--- a/src/molecule_docker/playbooks/validate-dockerfile.yml
+++ b/src/molecule_docker/playbooks/validate-dockerfile.yml
@@ -9,7 +9,7 @@
       # not mean molecule itself can run on them.
       - image: alpine:edge
       - image: centos:7
-      - image: centos:8
+      - image: rockylinux:8
       - image: ubuntu:latest
       - image: debian:latest
   tasks:
