--- a/src/molecule_docker/playbooks/validate-dockerfile.yml
+++ b/src/molecule_docker/playbooks/validate-dockerfile.yml
@@ -8,8 +8,8 @@
       # platforms supported as being managed by molecule/ansible, this does
       # not mean molecule itself can run on them.
       - image: alpine:edge
-      - image: centos:7
-      - image: rockylinux:8
+      - image: quay.io/centos/centos:centos7
+      - image: quay.io/centos/centos:stream8
       - image: ubuntu:latest
       - image: debian:latest
   tasks:
